# wordle_player

./: LICENSE  README.md  help_me_play.py  progress_tracker.json  pyproject.toml  requirements.txt  results.json  setup.cfg  word_freq_counter.py  wordle_player.py  wordle_results.txt
libwordle/: __init__.py  data.py  game.py  player.py  word_freqs.json
src/libwordle/: __init__.py  data.py  game.py  player.py  visualization.py  word_freqs.json  word_freqs_google.json  wordle_words.json
