[metadata]
name = libwordle
version = 0.0.1
author = Alethea Power
author_email = x@ikioi.net
description = A library to play and solve Wordle puzzles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aletheap/wordle
project_urls =
    Bug Tracker = https://github.com/aletheap/wordle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    ansicolors
    fire
    matplotlib
    numpy
    tqdm

[options.packages.find]
where = src

